--- a/style/style index.css
+++ b/style/style index.css
@@ -61,18 +61,19 @@ main>span .img-top::before{
     padding:5px 1rem;
 
 }
-main>span .choucroute .img-top::before{
-    content: "choucroute";
+main>span .event .img-top::before{
+    content: "Évenement/Annonce";
     background-color: blue;
 }
 
-main>span .chaise .img-top::before{
-    content:"chaise";
+main>span .formation .img-top::before{
+    content:"Formation";
     background-color: brown;
 }
 
 main>span article{
     display: flex;
+    position: relative;
     flex-direction: column;
     height: 60%;
     width: calc(100%-2em);                  /* c'est dégeulasse*/
@@ -93,6 +94,24 @@ main>span article{
 #article3>div{
     background-image: url(../Images/chaise.png);
     background-size: cover;
+}
+
+button.plus::before{
+    position: absolute;
+    text-align: center;
+    font-size: 1em;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 5px;
+    padding:5px 1rem;
+
+    content: '+';
+    font-size:5em;
+    visibility: visible;
+    
+}
+button.plus{
+    visibility: hidden;
 }
 /*----------- PARTIE CONTACT/CARTE -----------*/
 main>section{
