--- a/style/style index.css
+++ b/style/style index.css
@@ -12,6 +12,11 @@ body{
     justify-content: center;
 
     background-color: green;
+
+    --bg_aside: orange;
+    --bg_news:  #F59;
+    --bg_mapContact: blue;
+    --bg_mapContact_cases: grey;
 }
 
 aside{
@@ -21,7 +26,7 @@ aside{
     height: 100vh;
     width: 30px;
 
-    background-color: orange;
+    background-color: var(--bg_aside)
 }
 main{
     display: flex;
@@ -36,7 +41,7 @@ main{
 
 /*----------- PARTIE ACTUS -----------*/
 main>span{
-    background-color: #F59;
+    background-color: var(--bg_news);
     padding: 1em;
 }
 main>span>ul{
@@ -118,14 +123,14 @@ main>section{
     display: grid;
     height: 550px;
     width: 100%;
-    background-color: blue;
+    background-color: var(--bg_mapContact);
     grid-template-columns: 3fr 10fr 3fr;
     grid-template-rows: 2fr 10fr 2fr;
     gap: 2em;
 }
 
 main>section>div{
-    background-color: grey;
+    background-color: var(--bg_mapContact_cases);
 }
 main>section>div:first-child{
     grid-column: 1/2;
