--- a/style/style faq.css
+++ b/style/style faq.css
@@ -1,22 +1,10 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    list-style: none; /*enlever les points dans les listes*/
-    
-}
-
-body{
-    --height: 10vh;
-}
-
 header{
     height: var(--height);
-    border: solid;
 }
 
 body>section{
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
 }
 
 aside{
@@ -27,54 +15,20 @@ aside{
     margin-left: 2em; /*nous permet de faire l'indentation du sommaire*/
 }
 
+/*--------------- FAQ --------------------*/
 main{
     background-color: #555;
     padding: calc(var(--height)/5) 2%;
     min-height: calc(100vh - var(--height));
+    padding: 0% 7%;
+}
+main>div{
+    background-color: green;
 }
 
-.question{
-    display: none;
-    height: calc(var(--height)/3);
-    width: 100%;
-    background-color: #999;
-}
-.label-question{
-    position:relative;
-    display: block;
+summary{
     background-color: #ccc;
-    user-select: none;
-    
-}
-.label-question::before{
-    content:"";
-    position:absolute;
-    right:100%;
-    width: 0;
-    height: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 10px 0 10px 16px;
-    border-color: transparent transparent transparent #007bff;   
-}
-
-.reponse{
-    display: none;
-}
-
-.question:checked~.label-question::before{
-    content:"";
-    position:absolute;
-    right:100%;
-    width: 0;
-    height: 0;
-border-style: solid;
-border-width: 20px 8px 0 8px;
-border-color: red transparent transparent transparent;
-}
-.question:checked~.reponse{
-    display: block;
+    padding: 0em 0.5em;
 }
 details{
     margin: 2em 0em;
