--- a/style/style faq.css
+++ b/style/style faq.css
@@ -20,17 +20,14 @@ main{
     background-color: #555;
     padding: calc(var(--height)/5) 2%;
     min-height: calc(100vh - var(--height));
-    padding: 0% 7%;
-}
-main>div{
-    background-color: green;
+    padding: 2em 7%;
 }
 
 summary{
     background-color: #ccc;
     padding: 0em 0.5em;
 }
-details{
+details:nth-child(n+2),section:nth-child(n+2)>details{
     margin: 2em 0em;
 }
 details>*:nth-child(2){
@@ -39,4 +36,36 @@ details>*:nth-child(2){
 }
 details>section>details{ /*pour quand il y a des questions dans des questions*/
     margin-left:2em;
+}
+
+/*-----------FORMULAIRE--------------------------*/
+form{
+    display: grid;
+    grid-template-rows: 2em 6em 2em ;
+    row-gap: 0.5em;
+    column-gap: 5em;
+
+    margin-left: 50%;
+}
+
+label,#mail,form>section{
+    grid-row: 1/2;
+}
+form>section{
+    grid-column: 1/2;
+}
+select{
+    grid-column: 2/3;
+}
+textarea{
+    grid-row: 2/3;
+    grid-column: 1/3;
+}
+
+button{
+    grid-row: 3/4;
+    grid-column: 2/3;
+}
+button,select{
+    margin-right: 2em;
 }
