redimension des logos de la page d'accueil

--- a/style/style index.css
+++ b/style/style index.css
@@ -205,8 +205,9 @@ main>section>div:first-child{
     row-gap: 1em;
 }
 .logo>img{
+    max-height: 14%;
     height: auto;
-    width: 80%
+    max-width: 80%;
 }
 
 main>section>div>iframe{
