--- a/style/style faq.css
+++ b/style/style faq.css
@@ -2,7 +2,8 @@ header{
     height: var(--height);
 }
 body{
-    background-color: blue;
+    background-color: var(--color);
+    --back: rgb(0, 0, 0);
 }
 body>section{
     display: grid;
@@ -15,7 +16,7 @@ aside{
     left: 0px;
     height: fit-content;
     padding: 1%;
-    background-color: cornsilk;
+    background-color: gray;
 }
 
 
@@ -25,7 +26,7 @@ aside{
 
 /*--------------- FAQ --------------------*/
 main{
-    background-color: #555;
+    background-color: rgb(78, 78, 78);
     padding: calc(var(--height)/5) 2%;
     min-height: calc(100vh - var(--height));
     padding: 2em 7%;
@@ -33,7 +34,7 @@ main{
 
 summary{
     user-select : none;
-    background-color: #ccc;
+    background-color: transparent;
     color: black;
     padding: 0em 0.5em;
     border-radius: 5px;
@@ -63,7 +64,10 @@ details[open]>summary:after {
 details[open]>summary:before {
   content: " ▼";
 }
+details[open]>summary{
+background-color: gray;
 
+}
 /*-----------FORMULAIRE--------------------------*/
 form{
     display: grid;
