--- a/style/style faq.css
+++ b/style/style faq.css
@@ -1,9 +1,3 @@
-header{
-    height: var(--height);
-}
-body{
-    background-color: blue;
-}
 body>section{
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -15,7 +9,8 @@ aside{
     left: 0px;
     height: fit-content;
     padding: 1%;
-    background-color: cornsilk;
+    background-color: var(--bg-aside);
+    height: 100%;
 }
 
 
@@ -25,7 +20,7 @@ aside{
 
 /*--------------- FAQ --------------------*/
 main{
-    background-color: #555;
+    background-color: var(--bg-main);
     padding: calc(var(--height)/5) 2%;
     min-height: calc(100vh - var(--height));
     padding: 2em 7%;
@@ -33,7 +28,7 @@ main{
 
 summary{
     user-select : none;
-    background-color: #ccc;
+    background-color: var(--bg-button);
     color: black;
     padding: 0em 0.5em;
     border-radius: 5px;
