--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -29,7 +29,7 @@ main{
 summary{
     user-select : none;
     background-color: var(--bg-button);
-    color: black;
+    color: #000;
     padding: 0em 0.5em;
     border-radius: 5px;
 }
@@ -59,9 +59,22 @@ details[open]>summary:before {
   content: " ▼";
 }
 details[open]>summary{
-background-color: gray;
-
+background-color: #808080;
 }
+details h3{
+    margin-top: 2em;
+}
+details#q1>article>section{
+    display: grid;
+    grid-template-columns: 5fr 3fr;
+}
+details#q1 ul{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5em;
+    margin: 1em;
+}
+
 /*-----------FORMULAIRE--------------------------*/
 form{
     display: grid;
