--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -1,4 +1,4 @@
-body>section{
+body>div{
     display: grid;
     grid-template-columns: 1fr 5fr;
 }
@@ -7,10 +7,10 @@ aside{
     position: sticky;
     top: 0px;
     left: 0px;
-    height: fit-content;
+    height: 100vh;
+    /*height: fit-content;*/
     padding: 1%;
     background-color: var(--bg-aside);
-    height: 100%;
 }
 
 
