--- a/style/style_presentation.css
+++ b/style/style_presentation.css
@@ -51,8 +51,11 @@ article>h2,article>h3,article>h4{
     margin:1.5em 0 0.25em 0;
 }
 
-@media screen and (max-width:700px) {               /*ça marche pas*/
-    aside{
+@media screen and (max-width:1000px) {  /*remove aside*/
+    aside *{
         display: none;
+    }
+    body>div{
+        grid-template-columns: 0fr 6fr;
     }
 }
