--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -23,6 +23,7 @@ aside>div:first-child h1{
 
 /*--------------- FAQ --------------------*/
 main{
+    position: relative;
     background-color: var(--bg-main);
     padding: calc(var(--height)/5) 2%;
     min-height: calc(100vh - var(--height));
@@ -35,14 +36,13 @@ summary{
     color: #000;
     padding: 0em 0.5em;
     border-radius: 5px;
+    font-size: 1em;
 }
-details summary::before{
-    
-    content: ' ►';
+summary::before{
+    content: '  ►';
 }
-details summary::after{
-    
-    content: ' ◄';
+summary::after{
+    content: '  ◄';
 }
 details:nth-child(n+2),section:nth-child(n+2)>details{
     margin: 2em 0em;
@@ -80,12 +80,17 @@ details#Prereki ul{
 
 /*-----------FORMULAIRE--------------------------*/
 form{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+
     display: grid;
     grid-template-rows: 2em 6em 2em ;
     row-gap: 0.5em;
     column-gap: 5em;
 
-    margin-left: 50%;
+
+    /*margin-left: 50%;*/
 }
 
 label,#mail,form>section{
@@ -111,11 +116,7 @@ button,select{
 }
 
 
-
-
-
-
-
+/*------------------------------MEDIA QUERY----------------------------------------------*/
 @media screen and (max-width:1600px) {
     aside>div:first-child h2+ul *{
         display: none;
@@ -125,5 +126,24 @@ button,select{
 @media screen and (max-width:1150px) {
     aside>div:first-child p{
         display: none;
+    }
+}
+
+@media screen and (max-width:950px) { /*ça marche mais avec le f12 ça marche pas*/
+    details *{
+        font-size: 0.8em;
+    }
+}
+@media screen and (max-width:510px) { /*ça marche mais avec le f12 ça marche pas*/
+    details *{
+        font-size: 0.5em;
+    }
+}
+
+/*probleme de responsiv avec le forms mais le pb n'est pas visible avec le f12*/
+
+@media screen and (max-width:700px) { /*ça marche pas*/
+    form{
+        right: 10px;
     }
 }
