--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -67,7 +67,7 @@ background-color: #808080;
 details h3{
     margin-top: 2em;
 }
-details#Prereki>article>section{
+details#Prereki>article>div{
     display: grid;
     grid-template-columns: 5fr 3fr;
 }
