--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -80,7 +80,7 @@ details#Prereki ul{
 
 /*-----------FORMULAIRE--------------------------*/
 form{
-    position: absolute;
+    position: relative;
     bottom: 10px;
     right: 10px;
 
