--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -30,20 +30,54 @@ main{
     padding: 2em 7%;
 }
 
+details *{
+    font-size: 1em;
+}
+
+details h3{
+    margin-top:2em;
+    font-weight: normal;
+}
+
 summary{
+    position: relative;
     user-select : none;
     background-color: var(--bg-button);
     color: #000;
-    padding: 0em 0.5em;
+    padding: 0em 3em;
     border-radius: 5px;
     font-size: 1em;
 }
+summary h2{
+    font-size: 1.2em;
+    font-weight: normal;
+}
+
 summary::before{
+    position: absolute;
+    top:1px;
+    left:5px;
     content: '  ►';
 }
 summary::after{
+    position: absolute;
+    top:1px;
+    right:5px;
     content: '  ◄';
 }
+details[open]>summary:before {
+    position: absolute;
+    top:1px;
+    left:5px;
+    content: " ▼";
+}
+details[open]>summary:after {
+    position: absolute;
+    top:1px;
+    right: 5px;;
+    content: "▼ ";
+}
+
 details:nth-child(n+2),section:nth-child(n+2)>details{
     margin: 2em 0em;
 }
@@ -55,18 +89,10 @@ details>section>details{ /*pour quand il y a des questions dans des questions*/
     margin-left:2em;
 }
 
-details[open]>summary:after {
-  content: "▼ ";
-}
-details[open]>summary:before {
-  content: " ▼";
-}
 details[open]>summary{
-background-color: #808080;
+    background-color: #808080;
 }
-details h3{
-    margin-top: 2em;
-}
+
 details#Prereki>article>div{
     display: grid;
     grid-template-columns: 5fr 3fr;
