--- a/style/style_faq.css
+++ b/style/style_faq.css
@@ -29,6 +29,9 @@ main{
     min-height: calc(100vh - var(--height));
     padding: 2em 7%;
 }
+main>div{
+    margin-bottom: 200px;
+}
 
 details *{
     font-size: 1em;
@@ -106,7 +109,7 @@ details#Prereki ul{
 
 /*-----------FORMULAIRE--------------------------*/
 form{
-    position: relative;
+    position: absolute;
     bottom: 10px;
     right: 10px;
 
@@ -155,7 +158,7 @@ button,select{
     }
 }
 
-@media screen and (max-width:950px) { /*ça marche mais avec le f12 ça marche pas*/
+@media screen and (max-width:750px) { /*ça marche mais avec le f12 ça marche pas*/
     details *{
         font-size: 0.8em;
     }
@@ -166,7 +169,7 @@ button,select{
         margin-right: 0.4em;
     }
 }
-@media screen and (max-width:510px) { /*ça marche mais avec le f12 ça marche pas*/
+@media screen and (max-width:625px) { /*ça marche mais avec le f12 ça marche pas*/
     details *{
         font-size: 0.5em;
     }
