--- a/style/style_presentation.css
+++ b/style/style_presentation.css
@@ -52,12 +52,14 @@ article li{
     list-style: inside;
 }
 
-article>h2,article>h3,article>h4{
-    color:red;
+article h2,article h3,article h4{
     margin:1.5em 0 0.25em 0;
 }
 .bgmain2{
     margin-top: 2em;
+}
+section>section>p{
+    padding-left: 2em;
 }
 
 /*------------------------------MEDIA QUERY----------------------------------------------*/
